--- a/JeekobsSportCenter_ADMIN/CSS/style_Login.css
+++ b/JeekobsSportCenter_ADMIN/CSS/style_Login.css
@@ -83,12 +83,13 @@ body{
     border: none;
     cursor: pointer;    
     background-color: aqua;
+    transition:  0.3s ease-in-out;
 }
 
 .btn:hover{
     background: bisque;
     color:black;
-    transition: all 0.2s ease-out
+    transition:  0.4s ease-in-out;
 }
 
 .wrapper a{
