--- a/JeekobsSportCenter_ADMIN/CSS/style_Orders_Completed.css
+++ b/JeekobsSportCenter_ADMIN/CSS/style_Orders_Completed.css
@@ -137,32 +137,8 @@ ul.settings-dropdown a:hover{
     display: block;
 }
 
-.settings-dropdown:hover .product-management{
-    position: relative;
-    display: block;
-    border-radius: 0;
-}
-
-.product-management {
-    margin: 0;
-    padding: 1px;
-    display: none;
-    z-index: 999;
-    border-radius: 20px;
-}
-
-.product-management a{
-    font-weight: bold;
-    font-size: 13px;
-    margin-top: 0;
-}
-.product-management i {
-    transform: translateY(-50px);
-    margin-left: 37px;
-    font-size: 35px;
-}
-    
 .Logout{
+    margin: 1px;
     z-index: 999;
     display: none;
 }
@@ -304,7 +280,7 @@ ul.settings-dropdown a:hover{
     transition: 0.2s ease;
 }
 .table tr:hover{
-    background-color: rgba(255, 228, 196, 0.329);
+    box-shadow: 5px 5px 10px;
     transition: 0.3s ease;
 }
 .table th{   
