--- a/JeekobsSportCenter_ADMIN/CSS/style_Applicants.css
+++ b/JeekobsSportCenter_ADMIN/CSS/style_Applicants.css
@@ -301,6 +301,7 @@ ul.settings-dropdown a:hover{
 .table {
     font-size: 25px;
     border-collapse: collapse;
+    padding: 20px;
 }
 
 .table tr{
@@ -322,8 +323,39 @@ ul.settings-dropdown a:hover{
 }
 
 .table td{
-    padding: 10px;
+    padding-left: 10px;
     align-items: center;
     justify-content: center;
     height: 80px;
+}
+
+.table tr .actions i{
+    margin-left: 20px;
+    color: gray;
+    padding: 5px;
+    transition: 0.1s ease-in-out;
+}
+
+.table tr .actions i:hover {
+    color: black;
+    font-size: 30px;
+    transition: 0.2s ease-in-out;
+}
+
+.table tr i#trash{
+    color: gray;
+    transition: 0.1s ease-in-out;
+}
+
+.table tr i#trash:hover{
+    font-size: 30px;
+    color: red;
+    transition: 0.2s ease-in-out;
+}
+
+tr img{
+    margin-right: 25px;
+    height: 60px;
+    width: 60px;
+    border-radius: 60px;
 }
