--- a/JeekobsSportCenter_ADMIN/CSS/style_Dashboard.css
+++ b/JeekobsSportCenter_ADMIN/CSS/style_Dashboard.css
@@ -397,6 +397,7 @@ ul.settings-dropdown a:hover{
 
 .table td{
     padding: 10px;
+    padding-left: 90px;
     align-items: center;
     justify-content: center;
     height: 80px;
