--- a/JeekobsSportCenter_ADMIN/CSS/style_Reviews.css
+++ b/JeekobsSportCenter_ADMIN/CSS/style_Reviews.css
@@ -255,7 +255,7 @@ ul.settings-dropdown a:hover{
 .container-bg{
     background-color: white;
     width: 1650px;
-    height: 930px;
+    height: 950px;
     margin: auto;
     display: flex;
     border-radius: 20px;
@@ -302,10 +302,36 @@ ul.settings-dropdown a:hover{
 
 .table td{
     padding: 10px;
+    padding-left: 100px;
     align-items: center;
     justify-content: center;
     height: 80px;
 }
+
+.table tr .actions i{
+    color: gray;
+    margin-left: 40px; 
+    padding: 5px;
+    transition: 0.1s ease-in-out;
+}
+
+.table tr .actions i:hover {
+    color: black;
+    font-size: 30px;
+    transition: 0.2s ease-in-out;
+}
+
+.table tr i#trash{
+    color: gray;
+    transition: 0.1s ease-in-out;
+}
+
+.table tr i#trash:hover{
+    font-size: 30px;
+    color: red;
+    transition: 0.2s ease-in-out;
+}
+
 
 ::-webkit-scrollbar{
     width: .7vw;
