--- a/JeekobsSportCenter_ADMIN/CSS/style_Orders_Completed.css
+++ b/JeekobsSportCenter_ADMIN/CSS/style_Orders_Completed.css
@@ -294,7 +294,7 @@ ul.settings-dropdown a:hover{
 
 .table td{
     padding: 10px;
-    padding-left: 65px;
+    padding-left: 40px;
     align-items: center;
     justify-content: center;
     height: 80px;
@@ -322,6 +322,14 @@ ul.settings-dropdown a:hover{
     font-size: 30px;
     color: red;
     transition: 0.2s ease-in-out;
+}
+
+tr img{
+    display: inline-flex;
+    margin-right: 30px;
+    height: 70px;
+    width: 70px;
+    border-radius: 70px;
 }
 
 .nav_bar{
