--- a/JeekobsSportCenter_ADMIN/CSS/style_Orders_Pending.css
+++ b/JeekobsSportCenter_ADMIN/CSS/style_Orders_Pending.css
@@ -305,7 +305,7 @@ ul.settings-dropdown a:hover{
 
 .table td{
     padding: 10px;
-    padding-left: 65px;
+    padding-left: 40px;
     align-items: center;
     justify-content: center;
     height: 80px;
@@ -335,6 +335,13 @@ ul.settings-dropdown a:hover{
     transition: 0.2s ease-in-out;
 }
 
+tr img{
+    display: inline-flex;
+    margin-right: 30px;
+    height: 70px;
+    width: 70px;
+    border-radius: 70px;
+}
 
 .nav_bar{
     display: inline-flex;
