--- a/JeekobsSportCenter_ADMIN/CSS/style_Reviews.css
+++ b/JeekobsSportCenter_ADMIN/CSS/style_Reviews.css
@@ -302,7 +302,7 @@ ul.settings-dropdown a:hover{
 
 .table td{
     padding: 10px;
-    padding-left: 100px;
+    padding-left: 20px;
     align-items: center;
     justify-content: center;
     height: 80px;
@@ -332,6 +332,18 @@ ul.settings-dropdown a:hover{
     transition: 0.2s ease-in-out;
 }
 
+tr img{
+    display: inline-flex;
+    margin-right: 30px;
+    height: 70px;
+    width: 70px;
+    border-radius: 70px;
+}
+
+.table tr td#review-name{
+    display: flex;
+    font-size: 20px;
+}
 
 ::-webkit-scrollbar{
     width: .7vw;
