--- a/JeekobsSportCenter_ADMIN/CSS/style_Dashboard.css
+++ b/JeekobsSportCenter_ADMIN/CSS/style_Dashboard.css
@@ -39,14 +39,12 @@ body{
     
 }
 
-.box .profile i{
-    font-size: 60px;
+.box .profile img{
+    height: 100px;
+    width: 100px;
     transform: translateY(-40px);
-    margin-left: 10px;
-    padding: 10px;
-    background-color: aqua;
+    padding: 15px;
     border-radius: 100%;
-    color: black;
 }
 
 
@@ -397,10 +395,18 @@ ul.settings-dropdown a:hover{
 
 .table td{
     padding: 10px;
-    padding-left: 90px;
+    padding-left: 60px;
     align-items: center;
     justify-content: center;
     height: 80px;
+}
+
+tr img{
+    display: inline-flex;
+    margin-right: 30px;
+    height: 70px;
+    width: 70px;
+    border-radius: 70px;
 }
 
 ::-webkit-scrollbar{
