--- a/JeekobsSportCenter_ADMIN/CSS/style_Orders_Dispatched.css
+++ b/JeekobsSportCenter_ADMIN/CSS/style_Orders_Dispatched.css
@@ -96,16 +96,6 @@
     color: aqua;
 }
 
-.tag{
-    padding-top: 15px;
-    position: absolute;
-    margin-left: 275px;
-    font-size: 32px;
-}
-.tag p{
-    font-weight: bold;
-}
-
 
 /* DROPDOWN */
 
@@ -246,13 +236,25 @@ ul.settings-dropdown a:hover{
 }
 
 
+
 .container{
     display: grid;
     background-color: white;
     width: 1650px;
-    height: 937px;
+    height: 940px;
     border-radius: 20px;
     margin: auto;
+}
+
+.container .tag{
+    padding-top: 15px;
+    position: relative;
+     margin-left: 25px;
+     font-size: 32px;    
+}
+
+.tag p{
+   font-weight: bold;
 }
 
 .table-scroll{
@@ -261,7 +263,7 @@ ul.settings-dropdown a:hover{
     border-radius: 20px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 170px;
+    margin-top: 110px;
     overflow-y: auto;
     box-shadow: 5px 5px 15px;
 }
