--- a/JeekobsSportCenter_ADMIN/CSS/style_Pro_Soccerball.css
+++ b/JeekobsSportCenter_ADMIN/CSS/style_Pro_Soccerball.css
@@ -94,16 +94,6 @@
     color: aqua;
 }
 
-.tag{
-    padding-top: 15px;
-    position: absolute;
-    margin-left: 275px;
-    font-size: 32px;
-}
-.tag p{
-    font-weight: bold;
-}
-
 
 /* DROPDOWN */
 
@@ -246,30 +236,26 @@ ul.settings-dropdown a:hover{
 
 /*Pop out window*/
 
-::-webkit-scrollbar{
-    width: .7vw;
-    
-}
-::-webkit-scrollbar-thumb{
-    background-color:aqua;
-    border-radius: 100vw;
-    width: .9vw;
-}
-::-webkit-scrollbar-track{
-    background-color: white;
-    border-radius: 100vw;
-    margin-block: 2em;
-}
 
 .container{
     display: flex;
     background-color: white;
-    justify-content: center;
     width: 1655px;
     height: 940px;
     margin: auto;
     padding: 20px;
-    border-radius: 30px;
+    border-radius: 20px;
+}
+
+.container .tag{
+    margin-top: -10px;
+    position: absolute;
+     margin-left: 1px;
+     font-size: 32px;    
+}
+
+.tag p{
+   font-weight: bold;
 }
 
 .wrapper{
@@ -429,4 +415,20 @@ ul.settings-dropdown a:hover{
 .back i:hover{
     color: aqua;
     transition: 0.3s ease;
+}
+
+
+::-webkit-scrollbar{
+    width: .7vw;
+    
+}
+::-webkit-scrollbar-thumb{
+    background-color:aqua;
+    border-radius: 100vw;
+    width: .9vw;
+}
+::-webkit-scrollbar-track{
+    background-color: white;
+    border-radius: 100vw;
+    margin-block: 2em;
 }
