--- a/JeekobsSportCenter_ADMIN/CSS/style_Products.css
+++ b/JeekobsSportCenter_ADMIN/CSS/style_Products.css
@@ -155,7 +155,7 @@ ul.settings-dropdown a:hover{
     font-size: 35px;
 }
 
- button:hover{
+.Logout button:hover{
     background-color: white;
     transition: 0.4s ease-in-out;
     box-shadow: 10px 10px 20px;
@@ -257,15 +257,38 @@ ul.settings-dropdown a:hover{
    font-weight: bold;
 }
 
+.container .add-products-btn {
+    position: absolute;
+    right: 40px;
+    margin-top: -5px;
+}
+
+.add-products-btn button{
+    font-size: 20px;
+    padding: 5px;
+    border-radius: 10px;
+    border: none;
+    background-color: white;
+    color: gray;
+    transition: 0.1s ease-in-out;
+}
+
+.add-products-btn button:hover{
+    color: black;
+    transition: 0.2s ease-in-out;
+    box-shadow: 5px 5px 10px;
+}
+
 .wrapper{
+    display: grid;
+    grid-template-columns:  auto auto auto auto;
     width: 100%;
     height: 870px;
-    display: flex;
-    gap: 70px;
+    gap: 40px;
+    justify-content: center;
     border-radius: 20px;
-    margin-top: 33px;
-    overflow-y: scroll;
-    box-shadow: 10px 10px 20px;
+    margin-top: 30px;
+    overflow-y: auto;
 }
 
 .label p{
@@ -273,30 +296,22 @@ ul.settings-dropdown a:hover{
     margin-top: 40px;
     margin-bottom: 80px;
     font-size: 50px;
-    margin-left: 34%;
+    margin-left: 18%;
     font-weight: bold;
 }
 
-.Vcontainer{
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    gap: 50px;
-    justify-content: center;
-    align-items: center;
-    margin-left: 60px;
-}
-.Vcontainer img:hover{
-    transition: 0.2s ease;
-    padding: 10px;
-}
-
-.Vcontainer img{
+.wrapper img{
     display: flex;
     width: 240px;
     height: 200px;
-    margin-left: 18px;
+    margin-left: 19px;
     margin-top: 30px;
     transition: 0.2s ease;
+}
+
+.wrapper img:hover{
+    transition: 0.2s ease;
+    padding: 10px;
 }
 
 .Volleyball{
@@ -305,6 +320,7 @@ ul.settings-dropdown a:hover{
     height: 360px;
     padding: 10px;
     border-radius: 20px;
+    margin-top: 70px;
     box-shadow: 5px 5px 10px gray;
 }
 
@@ -384,38 +400,6 @@ ul.settings-dropdown a:hover{
     transform: translateX(-120px);
 }
 
-
-.next{
-    position: absolute;
-    font-size: 69px;
-    top: 440px;
-    right: 34px;
-    color: black;
-}
-.next i{
-    color: black;
-    transition: 0.3s ease;
-}
-.next i:hover{
-    transition: 0.3s ease;
-    color: aqua;
-}
-
-.back{
-    position: absolute;
-    font-size: 69px;
-    top: 440px;
-    left: 280px;
-    color: black;
-}
-.back i{
-    color: black;
-    transition: 0.3s ease;
-}
-.back i:hover{
-    color: aqua;
-    transition: 0.3s ease;
-}
 
 ::-webkit-scrollbar{
     width: .7vw;
