--- a/JeekobsSportCenter_ADMIN/CSS/style_Dashboard.css
+++ b/JeekobsSportCenter_ADMIN/CSS/style_Dashboard.css
@@ -166,7 +166,19 @@ ul.settings-dropdown a:hover{
 
 /*Pop out window*/
 
-.Form{
+
+.overlay{
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
+
+.overlay .Form{
     width: 425px;
     height: 277px;
     box-shadow:  10px 10px 20px;
@@ -180,7 +192,6 @@ ul.settings-dropdown a:hover{
     transition: top 0ms ease-in-out 200ms,
                 opacity 200ms ease-in-out 0ms,
                 transform 20ms ease-in-out 0ms;
-                z-index: 1000;
 }
 .Form.active {
     top: 50%;
