--- a/JeekobsSportCenter_ADMIN/CSS/style_Dashboard.css
+++ b/JeekobsSportCenter_ADMIN/CSS/style_Dashboard.css
@@ -166,19 +166,7 @@ ul.settings-dropdown a:hover{
 
 /*Pop out window*/
 
-
-.overlay{
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 1000;
-}
-
-.overlay .Form{
+.Form{
     width: 425px;
     height: 277px;
     box-shadow:  10px 10px 20px;
@@ -192,6 +180,7 @@ ul.settings-dropdown a:hover{
     transition: top 0ms ease-in-out 200ms,
                 opacity 200ms ease-in-out 0ms,
                 transform 20ms ease-in-out 0ms;
+                z-index: 1000;
 }
 .Form.active {
     top: 50%;
@@ -201,6 +190,7 @@ ul.settings-dropdown a:hover{
                 opacity 200ms ease-in-out 0ms,
                 transform 20ms ease-in-out 0ms;
 }
+
 .Form p{
     text-align: center;
     font-size: 50px;
@@ -216,7 +206,7 @@ ul.settings-dropdown a:hover{
     padding: 20px;
     outline: none;
     border: none;
-    border-radius: 20px;
+    border-radius: 10px;
     transition: 0.3s ease-in-out;
 }
 .Form .close-btn{
@@ -225,7 +215,7 @@ ul.settings-dropdown a:hover{
     position: absolute;
     left: 270px;
     top: 160px;
-    border-radius: 20px;
+    border-radius: 10px;
     padding: 20px;
     transition: 0.3s ease-in-out;
 }
