--- a/JeekobsSportCenter_ADMIN/CSS/style_Products.css
+++ b/JeekobsSportCenter_ADMIN/CSS/style_Products.css
@@ -258,14 +258,14 @@ ul.settings-dropdown a:hover{
 }
 
 .container .add-products-btn {
-    position: absolute;
-    right: 40px;
+    position: relative;
+    left: 1400px;
     margin-top: -5px;
 }
 
 .add-products-btn button{
-    font-size: 20px;
-    padding: 5px;
+    font-size: 25px;
+    padding: 10px;
     border-radius: 10px;
     border: none;
     background-color: white;
@@ -282,12 +282,13 @@ ul.settings-dropdown a:hover{
 .wrapper{
     display: grid;
     grid-template-columns:  auto auto auto auto;
-    width: 100%;
-    height: 870px;
+    width: 150%;
+    height: 800px;
     gap: 40px;
-    justify-content: center;
+    margin-right: auto;
+    margin-left: auto;
     border-radius: 20px;
-    margin-top: 30px;
+    margin-top: 80px;
     overflow-y: auto;
 }
 
