--- a/JeekobsSportCenter_ADMIN/CSS/style_Products.css
+++ b/JeekobsSportCenter_ADMIN/CSS/style_Products.css
@@ -265,7 +265,7 @@ ul.settings-dropdown a:hover{
 
 .add-products-btn button{
     font-size: 25px;
-    padding: 10px;
+    padding: 10px 30px;
     border-radius: 10px;
     border: none;
     background-color: white;
@@ -414,5 +414,5 @@ ul.settings-dropdown a:hover{
 ::-webkit-scrollbar-track{
     background-color: white;
     border-radius: 100vw;
-    margin-block: 2em;
+    
 }
